--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://ubunfakn.github.io",
+  "homepage": "https://ubunfakn.github.io/Gigbee",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
